// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Snap render Progress -- props color 1`] = `
<div
  class="at-progress"
>
  <div
    class="at-progress__outer"
  >
    <div
      class="at-progress__outer-inner"
    >
      <div
        class="at-progress__outer-inner-background"
        style="width: 0%; height: 10px; background-color: rgb(255, 73, 73);"
      />
    </div>
  </div>
  <!---->
</div>
`;

exports[`Progress Snap render Progress -- props isHidePercent 1`] = `
<div
  class="at-progress"
>
  <div
    class="at-progress__outer"
  >
    <div
      class="at-progress__outer-inner"
    >
      <div
        class="at-progress__outer-inner-background"
        style="width: 0%; height: 10px;"
      />
    </div>
  </div>
  <div
    class="at-progress__content"
  >
    <div>
      0%
    </div>
  </div>
</div>
`;

exports[`Progress Snap render Progress -- props percent 1`] = `
<div
  class="at-progress"
>
  <div
    class="at-progress__outer"
  >
    <div
      class="at-progress__outer-inner"
    >
      <div
        class="at-progress__outer-inner-background"
        style="width: 25%; height: 10px;"
      />
    </div>
  </div>
  <!---->
</div>
`;

exports[`Progress Snap render Progress -- props status(error) 1`] = `
<div
  class="at-progress at-progress--error"
>
  <div
    class="at-progress__outer"
  >
    <div
      class="at-progress__outer-inner"
    >
      <div
        class="at-progress__outer-inner-background"
        style="width: 0%; height: 10px;"
      />
    </div>
  </div>
  <!---->
</div>
`;

exports[`Progress Snap render Progress -- props status(progress) 1`] = `
<div
  class="at-progress at-progress--progress"
>
  <div
    class="at-progress__outer"
  >
    <div
      class="at-progress__outer-inner"
    >
      <div
        class="at-progress__outer-inner-background"
        style="width: 0%; height: 10px;"
      />
    </div>
  </div>
  <!---->
</div>
`;

exports[`Progress Snap render Progress -- props status(success) 1`] = `
<div
  class="at-progress at-progress--success"
>
  <div
    class="at-progress__outer"
  >
    <div
      class="at-progress__outer-inner"
    >
      <div
        class="at-progress__outer-inner-background"
        style="width: 0%; height: 10px;"
      />
    </div>
  </div>
  <!---->
</div>
`;

exports[`Progress Snap render initial Progress 1`] = `
<div
  class="at-progress"
>
  <div
    class="at-progress__outer"
  >
    <div
      class="at-progress__outer-inner"
    >
      <div
        class="at-progress__outer-inner-background"
        style="width: 0%; height: 10px;"
      />
    </div>
  </div>
  <!---->
</div>
`;
